         '#include "config.h"' (thanks, Stuart) (Sergio).
20150704 tape.c: skip tape traps if VERIFY is requested (patch #337) (UB880D).
20150726 machines/{spec_se.c,tc2048.c,tc2068.[ch],ts2068.c},
         peripherals/{dck.c,scld.[ch]}: The Timex SCLD (on daughterboard in
         the TS2068) is contended in all of the home, Dock and Exrom banks in
         the 0x4000 - 0x7FFF range (thanks, rga24 from WoS) (Fred).
20150803 peripherals/printer.c: make the partial decode ZX Printer not require a
         hard reset to enable (thanks, RMartins) (Fred).
20150824 Makefile.am,fuse.c,man/fuse.1,memory.[c|h],menu.[c|h],menu_data.dat,
         svg.[c|h],tape.c,ui.c,ui/{gtk/gtkui.c,ui.h,widget/widget.c,
         win32/win32ui.c},z80/{coretest.c,z80_checks.h,z80_ops.c}: capture BASIC
         video functions to SVG file (patch #322) (Stefano Bodrato).
20150824 ui/widget/widget.c: remove unused function (Sergio).
20151008 sound.c: remove DC offset compensation as it results in inaccurate
         output when envelopes are used and is not required when using the
         filtered sound output which removes the DC offset anyway (patch #339)
         (Matthew Westcott and Fred)
20151020 z80/z80_checks.h: fix segfault due to inconsistent SETUP_CHECK() and
         CHECK() ordering (UB880D; thanks, Guesser).
20151108 hacking/{code_beautifiers.txt,uncrustify.cfg}: document Uncrustify and
         Indent code beautifiers (patch #340) (Sergio).
20151108 man/fuse.1: fix pal-tv2x and Pentagon ROMs command line options
         (Sergio).
20151109 configure.ac,data/{Makefile.am,shell-completion/bash/fuse}: support 
         bash completion (patch #335) (Sergio).
20151115 hacking/Makefile.am: add missing files (Sergio).
20151115 data/{Makefile.am,shell-completion/diff_options.sh}: add a script to
         keep options in sync (Sergio).
20151115 hacking/ChangeLog,man/fuse.1: add missing --drive-didaktik80[a|b]-type
         options (Sergio).